FIx warnings